--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ header, footer {
     border-radius: 10px;
     text-align: center;
     padding: 30px;
-    font-family: "Lato",Helvetica, sans-serif;
+    font-family: 'Lato',Helvetica, sans-serif;
     color: white;
 }
 
@@ -31,14 +31,14 @@ body {
 h2 {
     margin-left: 30px;
     font-size: 2em;
-    font-family: "Klint Std", Helvetica, sans-serif;
+    font-family: 'Klint Std', Helvetica, sans-serif;
     color: #515151;
 }
 
 ul {
     margin-left: 50px;
     font-size: 1em;
-    font-family: "Lato", Helvetica, sans-serif;
+    font-family: 'Lato', Helvetica, sans-serif;
     line-height: 2.3rem;
 }
 
