--- a/css/main.css
+++ b/css/main.css
@@ -29,14 +29,14 @@ body {
     margin: 30px;
 }
 h2 {
-    margin-left: 30px;
+    padding-left: 30px;
     font-size: 2em;
     font-family: 'Klint Std', Helvetica, sans-serif;
     color: #515151;
 }
 
 ul {
-    margin-left: 50px;
+    padding-left: 80px;
     font-size: 1em;
     font-family: 'Lato', Helvetica, sans-serif;
     line-height: 2.3rem;
