--- a/css/small.css
+++ b/css/small.css
@@ -1,3 +1,7 @@
+* {-mox-box-sizing: border-box;
+-webkit-box-sizing: border-box; box-sizing:
+border-box;
+}
 
 header, footer {
     background-color: #234680;
