--- a/ranch/css/medium.css
+++ b/ranch/css/medium.css
@@ -1,5 +1,8 @@
 @media only screen and (min-width: 560px) {
-    nav li {float: left; width: 25%;}
+    nav li {
+        float: left;
+        width: 25%;
+    }
 
     main figure {
         float: right;
