--- a/ranch/css/small.css
+++ b/ranch/css/small.css
@@ -1,3 +1,14 @@
+* {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+html {
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+}
+
 body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 16px;
@@ -16,11 +27,17 @@ header h2 {
     margin: 0;
 }
 
-nav {background-color: #111;}
+nav {
+    background-color: #111;
+}
 
-nav ul{ margin: 0; padding: 0;}
+nav ul {
+    margin: 0; padding: 0;
+}
 
-nav li {list-style-type: none;}
+nav li {
+    list-style-type: none;
+}
 
 nav li.active {background-color: #333;}
 
@@ -45,14 +62,19 @@ main h1{
     color: #17a8e4;
 }
 
-main figure img {width:100%;}
+main figure img {
+    width:100%;
+}
 
 main figure {
     width: 100%;
     margin: 0;
 }
 
-main figcaption {text-align: center; font-size: .8rem;}
+main figcaption {
+    text-align: center;
+    font-size: .8rem;
+}
 
 footer {
     text-align: center;
