--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -22,7 +22,7 @@ padding: 15px;
 margin: 10px;
 border-radius: 10px;
 border: solid grey 2px;
-border-top: 55px solid #D8BFD8;
+border-top: 55px solid rgb(107, 142, 35);
 }
 
 section p {
