--- a/water_cycle/css/small.css
+++ b/water_cycle/css/small.css
@@ -37,7 +37,7 @@ nav ul li a {
     padding: .5rem 0;
     text-decoration: none;
     font-size: .9rem;
-    text-align: center;
+    justify-content: center;
 }
 
 
