--- a/lesson3/css/large.css
+++ b/lesson3/css/large.css
@@ -1,5 +1,7 @@
 @media only screen and (min-width: 64rem) {
 
-    header, nav, main {
+    header, nav, main, footer {
         max-width: 64rem; margin: auto;
     }
+
+}
