--- a/lesson7/lesson7.css/lazyload.css
+++ b/lesson7/lesson7.css/lazyload.css
@@ -17,11 +17,11 @@ img {
 
 .grid {
      display: grid;
-     grid-template-columns: repeat(1fr);
+     grid-template-columns: 1fr;
     justify-items: center;
     }
-}
 
 img[data-src] {
     filter: blur(0.2em);
 }
+
