Changes to the table

--- a/lesson-8/lesson8.css/tablebuild.css
+++ b/lesson-8/lesson8.css/tablebuild.css
@@ -1,6 +1,7 @@
 table {
     font-family: 'Ubuntu', sans-serif;
-    width: 380px;
+    width: max-content;
+    /*width: 380px;*/
     border-collapse: collapse;
     font-size: 1.4em;
     text-align: center;
