--- a/lesson-8/lesson8.css/small.css
+++ b/lesson-8/lesson8.css/small.css
@@ -347,6 +347,7 @@ form input.submitBtn {
 form textarea {
     max-width: 95%;
     border-radius: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
 #rating {
