--- a/lesson-8/lesson8.css/small.css
+++ b/lesson-8/lesson8.css/small.css
@@ -337,22 +337,23 @@ form input.submitBtn {
     color: white;
     font-weight: bold;
     border-radius: 0.5rem;
-    padding: .75rem 1.5rem;
-    margin: 0 0 2rem;
-    width: 96%;
-    max-width: 20rem;
+    padding: .75rem 1.2rem;
+    margin: 0 1.2rem 2rem;
+    width: 95%;
+    max-width: 15rem;
 }
 
 
 form textarea {
-    max-width: 95%;
+    width: 95%;
+    max-width: 20rem;
     border-radius: 0.5rem;
     margin-bottom: 0.5rem;
 }
 
 #rating {
-     width: 96%;
-     max-width: 20rem;
+     width: 95%;
+     max-width: 19rem;
      margin-bottom: 1rem;
 }
 
