--- a/lesson-9/lesson-9.css/small.css
+++ b/lesson-9/lesson-9.css/small.css
@@ -18,6 +18,15 @@ body {
     border-radius: 30px;
 }
 
+main {
+    font-size: 16px;
+    font-family: "Lato", Helvetica, sans-serif;
+    padding: 1em;
+    max-width: 1028px;
+    margin: 0 auto;
+}
+
+
 /*----------- HEADER --------------*/
 header, footer {
     padding: 1rem 2%;
@@ -98,12 +107,7 @@ nav ul.hide {
 }
 
 /*----------- MAIN --------------*/
-
 main {
-    font-size: 16px;
-    font-family: "Lato", Helvetica, sans-serif;
-    max-width: 1028px;
-    margin: 0 auto;
     padding: 0 1%;
     min-height: 10rem;
 }
@@ -117,7 +121,7 @@ section.forecast {
     margin: 10px auto;
     padding: 25px;
     color: black;
-    background-color: #f4f4f4;
+    background-color: #f6f6f6;
 
 }
 
@@ -172,13 +176,19 @@ section.forecast {
         display: none;
     }
 
+    .hero {
+        width: 100%;
+        display: block;
+    }
+
 h2 {
     font-family: "Merriweather", Times, serif;
     font-weight: 600;
-    font-size: 1.4rem;
-    color: #f49f07;
+    font-size: 1.1rem;
+    color: #c57e00;
     text-align: center;
     padding: 10px;
+    margin-bottom: 0;
 }
 
 footer {
@@ -195,12 +205,6 @@ footer {
 #currentdate {
     padding: 10px;
 }
-
- .boys_photo {
-     float: none;
-      width: 100%;
-      height: auto;
- }
 
 section h3 {
    font-family: "Merriweather", Times, serif;
@@ -229,6 +233,97 @@ div.hideme {
     display: none;
 }
 
+.image_center {
+     display: flex;
+     justify-content: center;
+}
+
+figure {
+    margin: 0;
+}
+
+figure img {
+    width: 100%;
+}
+
+.im_width {
+    width: 100%;
+    display: block;
+    margin-bottom: 1rem;
+}
+
+/*form.storm-form {
+    display: table;
+}
+
+div.storm-form {
+    display: table-row;
+}
+
+label, input {
+    display: table-cell;
+    margin-bottom: 10px;
+}
+
+label {
+    padding-right: 10px;
+}*/
+
+.cards section {
+        text-align: center;
+        padding-bottom: 2rem;
+        background-color: #f2faff;
+        border: 0.15rem solid #b3b3b3;
+        border-radius: 0.7rem;
+        margin: 1rem;
+        box-shadow: 3px 3px 3px #b3b3b3;
+    }
+
+.cards h3 {
+         font-family: "Raleway", Helvetica, sans-serif;
+         font-weight: bold;
+         font-size: 1.9rem;
+         color: #005198;
+         text-shadow: 1px 2px #b3b3b3;
+     }
+
+ .cards h4 {
+         color: #001f43;
+         font-style: italic;
+         font-weight: bold;
+         font-size: 1.3rem;
+         margin-top: 0px;
+     }
+
+
+#frames {
+    color:white;
+}
+
+ul li {
+    list-style-type: none;
+    font-size: 1.2rem;
+    font-family: "Raleway", Helvetica, sans-serif;
+}
+
+#slogan {
+    font-size: 1.7rem;
+    color: #001f43;
+    font-style: italic;
+}
+
+
+.pullquote {
+    text-align: center;
+    font-size: 2.3em;
+    font-weight: 800;
+    line-height: 2.5rem;
+    color: #005198;
+}
+
+ul {
+    padding: 0px;
+}
 
 /*----- Clearfix: Force an Element not to collapse -----*/
 
