--- a/lesson11/css/small.css
+++ b/lesson11/css/small.css
@@ -177,14 +177,14 @@ p {
 }
 
 .difcolor {
-    color: #fbbd17;
+    color:#a8530b;
 }
 
 h2 {
     font-family: "Merriweather", Times, serif;
     font-weight: 600;
     font-size: 1.4rem;
-    color: #c05f0c;
+    color: #a8530b;
     text-align: center;
     padding: 10px;
 }
@@ -390,7 +390,7 @@ form fieldset {
 
 form legend {
     background-color: white;
-    color: #c05f0c;
+    color: #a8530b;
     font-size: 1.2rem;
     font-weight: bold;
     padding: 10px;
@@ -429,14 +429,14 @@ form label.sbs {
 form label.danger {
     display: block;
     padding-top: 1rem;
-    color: #c05f0c;
+    color: #a8530b;
     font-weight: 800;
     font-size: 1rem;
 }
 
 form input.submitBtn {
     border: none;
-    background-color:#c05f0c;
+    background-color:#a8530b;
     color: white;
     font-weight: bold;
     border-radius: 0.5rem;
