--- a/lesson11/css/large.css
+++ b/lesson11/css/large.css
@@ -52,6 +52,10 @@
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     }
 
+    .local_image {
+       padding-left: 7rem;
+    }
+
 /*----picture grid---*/
 
       .grid {
